# mocksmith

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: args.rs  builder.rs  clangwrap.rs  generate.rs  headerpath.rs  lib.rs  log.rs  main.rs  model.rs  naming.rs
src/generate/: builder.rs
src/model/: factory.rs
tests/: app_integration_tests.rs  app_invalid_args_tests.rs  app_logging_tests.rs  lib_integration_tests.rs
tests/assertions/: mod.rs
tests/helpers/: mod.rs
tests/paths/: mod.rs
tests/program_under_test/: mod.rs
