[package]
name = "mocksmith"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["Thomas Johannesson"]
description = """
Mocksmith is a command line utility and a Rust library to automatically create C++ mocks
for the Google Mock (gMock) framework.
"""
repository = "https://github.com/jordfras/mocksmith"
keywords = ["mock", "googlemock", "gMock", "googletest", "c++"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["/.github/"]

[dependencies]
anyhow = "1.0"
capitalize = "0.3"
clap = { version="4.5", features=["derive", "wrap_help"] }
dunce = "1.0"
pathdiff = "0.2"
regex = { version="1.11", default-features=false, features=["std"] }
thiserror = "2.0"

# Use runtime feature to load libclang at runtime. This makes it possible to build without
# instructing clang-sys where libclang is located. For some reason, clang-sys does a
# better job at finding libclang this way.
[target.'cfg(not(target_os = "windows"))'.dependencies]
clang = { version="2.0", features=["runtime", "clang_5_0"] }

# There is an issue with clang 19 and 20 on Windows when using the runtime feature.
# Unloading of DLL causes segfault when the clang::Clang object is droppped.
[target.'cfg(target_os = "windows")'.dependencies]
clang = { version="2.0", features=["clang_5_0"] }


[dev-dependencies]
cargo_metadata = "0.21"
tempfile = { version="3.20", default-features=false }
